2003-09-23  Ion Badulescu  <ion@opteron.tower-research.com>

	* minor new port: x86_64-unknown-linux-rh2.9.5AS. (Red Hat
	Enterprise Linux 3.0 beta running on a 64-bit AMD64 platform)

2003-09-22  Ion Badulescu  <ionut@buggy.badula.org>

	* conf/autofs/autofs_solaris_v1.c (autofs_mount_fs): compile fix

2003-09-19  Ion Badulescu  <ionut@moisil.badula.org>

	* amd/amfs_nfsl.c (amfs_nfsl_match): checking opt_fs is not always
	enough, we should lstat() the sublink if it's defined.
	(amfs_nfsl_ffserver): ditto
	(ALL): Removed some obsolete comments. The nfsl code is now little
	more than a very straight-forward switch between link and nfs.

	* amd/amfs_link.c (amfs_link_match): more up-to-date explanation
	for the prepend-the-dot hack for type link; also, the sublink is
	already normalized and absolute, so take advantage of that

	* amd/amfs_generic.c (amfs_lookup_one_mntfs): the sublink is
	already normalized and absolute, so take advantage of that

	* amd/am_ops.c (ops_match): normalize the sublink here, early into
	the matching process

	* amd/autil.c (am_mounted): be consistent and accept both
	"nounmount" and "noumount" as pseudo mount options (same as
	"unmount" and "umount" nearby)

	* amd/Makefile.am (build_version.h): fixed dependencies (depends
	on amd_OBJECTS, not OBJECTS -- which doesn't even exist)

2003-09-19  Erez Zadok  <ezk@dhcp8.fsl.cs.sunysb.edu>

	* amd/amq_subr.c (amqproc_export_1_svc): force double casting to
	avoid gcc-3.3 complaints on Solaris 9 about "dereferencing
	type-punned pointer will break strict-aliasing rules".

2003-09-16  Ion Badulescu  <ionut@moisil.badula.org>

	* Released beta version 6.1b4

2003-09-15  Ion Badulescu  <ionut@moisil.badula.org>

	* doc/am-utils.texi (opts Option): removed documentation for old
	ignore_portmapper mount option, documented the new webnfs option

	* NEWS: webnfs support

	* amd/srvr_nfs.c (find_nfs_srvr): set MFF_WEBNFS if the "webnfs"
	(former "ignore_portmapper") mount option is present
